<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/margin_24dp"
    android:layout_marginHorizontal="@dimen/margin_24dp"
    android:elevation="4dp"
    android:background="@drawable/converter_custom_background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/amount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/amount"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/amount_country_spinner"
        android:layout_width="0dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_textview" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/amount_input"
        android:inputType="number"
        android:background="@drawable/edit_text_custom_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/colorEditText"
        android:textAlignment="textEnd"
        android:hint="@string/amount_hint"
        android:textSize="@dimen/font_20sp"
        android:textColorHint="@color/colorEditText"
        android:padding="@dimen/margin_12dp"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/amount_country_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amount_country_spinner"
        app:layout_constraintTop_toTopOf="@+id/amount_country_spinner" />

    <LinearLayout
        android:id="@+id/convert_button_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_input">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorEditText" />

        <ImageButton
            android:id="@+id/convert_button"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/convert_button_custom_background"
            android:contentDescription="@null"
            android:src="@drawable/ic_convert" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorEditText" />
    </LinearLayout>

    <TextView
        android:id="@+id/converted_amount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/converted_amount"
        android:textSize="@dimen/font_16sp"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_button_linear_layout" />

    <Spinner
        android:id="@+id/converted_amount_country_spinner"
        android:layout_width="0dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/converted_amount_textview" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/converted_amount_input"
        android:inputType="none"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/edit_text_custom_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorEditText"
        android:textAlignment="textEnd"
        android:hint="@string/converted_amount_hint"
        android:textColorHint="@color/colorEditText"
        android:padding="@dimen/margin_12dp"
        android:enabled="false"
        android:focusable="false"
        android:textSize="@dimen/font_20sp"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/converted_amount_country_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/converted_amount_country_spinner"
        app:layout_constraintTop_toTopOf="@+id/converted_amount_country_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>